# Online-Motion-Planning-and-Control-in-3D-Environment

./: README.md
controller/src/: control.cpp
mpc_controller/: CMakeLists.txt  package.xml
mpc_controller/include/mpc_controller/: mpc_control.hpp
mpc_controller/launch/: mpc_controller_sim.launch
mpc_controller/src/: control_v2.cpp  mpc_control.cpp
navgation/: CMakeLists.txt
navgation/config/: config.json  config_ros.json  dual_ekf.yaml  global_ekf.yaml  local_ekf.yaml
navgation/include/navigation/: astar.h  data_struct.h  safe_corridor_generator.h  trajectory_generator.h
navgation/launch/: ekf_global.launch  ekf_local.launch  glim.launch  gmapping.launch  pointcloud_to_laserscan.launch  start_sim.launch
navgation/scripts/: aft_mapped_in_base_link.py  aft_mapped_odom_pub.py  aft_mapped_pose_pub.py  aft_mapped_to_base_link.py  camera_init_to_map.py  camera_init_to_odom.py  ll2tf.py  map_to_base_footprint.py  map_to_odom.py  map_to_odom_cam_init.py  odom_to_base_footprint.py
navgation/src/: astar.cpp  perception_node.cpp  safe_corridor_generator.cpp  trajectory_generator.cpp
